DK - tab content background colour now spans entire width of screen, banner image resizing to prevent overflow

--- a/css/marketing-website-v1.css
+++ b/css/marketing-website-v1.css
@@ -257,7 +257,8 @@
 }
 
 .div-block-5 {
-  background-color: hsla(189.2307692307692, 52.00%, 95.10%, 1.00);
+  padding-right: 20px;
+  padding-left: 20px;
   text-align: center;
 }
 
@@ -265,7 +266,12 @@
   width: 100%;
   padding-right: 30px;
   padding-left: 30px;
+  background-color: #e6e6e6;
   opacity: 1;
+}
+
+.div-block-6.squeeze {
+  background-color: #e6e6e6;
 }
 
 .text-block-6 {
@@ -289,7 +295,6 @@
 }
 
 .div-block-7 {
-  background-color: hsla(189.2307692307692, 52.00%, 95.10%, 1.00);
   text-align: center;
 }
 
@@ -463,7 +468,7 @@
 }
 
 .banner-image {
-  max-width: 33%;
+  max-width: 30%;
 }
 
 .section-2 {
@@ -482,11 +487,11 @@
 }
 
 .banner-image-right {
-  max-width: 33%;
+  max-width: 30%;
 }
 
 .banner-image-left {
-  max-width: 33%;
+  max-width: 30%;
   padding-right: 10px;
 }
 
